--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
+    "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
+    "bcrypt": "^5.1.1",
+    "mongodb": "^6.1.0",
     "next": "latest",
     "next-auth": "^4.23.2",
     "react": "latest",
@@ -20,6 +24,7 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
@@ -27,6 +32,7 @@
     "eslint": "latest",
     "eslint-config-next": "latest",
     "postcss": "latest",
+    "prisma": "^5.4.1",
     "tailwindcss": "latest",
     "typescript": "latest"
   }
