--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -16,6 +16,7 @@
     "mongodb": "^6.1.0",
     "next": "latest",
     "next-auth": "^4.23.2",
+    "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
