--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -13,19 +13,25 @@
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "leaflet": "^1.9.4",
     "mongodb": "^6.1.0",
     "next": "latest",
     "next-auth": "^4.23.2",
+    "next-cloudinary": "^4.24.0",
     "query-string": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.7",
+    "world-countries": "^5.0.0",
     "zustand": "^4.4.3"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/leaflet": "^1.9.6",
     "@types/node": "latest",
     "@types/react": "latest",
     "@types/react-dom": "latest",
