--- a/airbnb/package.json
+++ b/airbnb/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.4.2",
     "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
+    "date-fns": "^2.30.0",
     "leaflet": "^1.9.4",
     "mongodb": "^6.1.0",
     "next": "latest",
